--- a/block-BHaacj/index.html
+++ b/block-BHaacj/index.html
@@ -160,7 +160,7 @@
             </div>
             <div class="checkin_details">
               <input
-                type="text"
+                type="date"
                 name="destination_name"
                 placeholder="Check in"
                 style="
@@ -172,7 +172,7 @@
                 "
               />
               <input
-                type="text"
+                type="date"
                 name="destination_name"
                 placeholder="Check out"
                 style="
@@ -520,9 +520,10 @@
               explicabo perspiciatis asper iores dignissimos.
             </p>
           </div>
+          <img style=" position: relative; left: 30px;"src="assets/button-curve.png">
           <div class="hotel_charge">
             <p style="text-align: center; font-size: 30px; margin-bottom: 20px;"> $ 440 </p>
-            <p style="font-size: 12px;"> CONTINUE READING </p>
+            <p style="font-size: 12px;position: relative;left: 10px;"> CONTINUE READING </p>
           </div>
 
         </div>
@@ -554,9 +555,10 @@
               explicabo perspiciatis asper iores dignissimos.
             </p>
           </div>
+          <img style=" position: relative; left: 30px;"src="assets/button-curve.png">
           <div class="hotel_charge">
             <p style="text-align: center; font-size: 30px; margin-bottom: 20px;"> $ 440 </p>
-            <p style="font-size: 12px;"> CONTINUE READING </p>
+            <p style="font-size: 12px;position: relative;left: 10px;"> CONTINUE READING </p>
           </div>
         </div>
         <div class="hotels_snipet">
@@ -587,9 +589,10 @@
                 explicabo perspiciatis asper iores dignissimos.
               </p>
             </div>
+            <img style=" position: relative; left: 30px;"src="assets/button-curve.png">
             <div class="hotel_charge">
                 <p style="text-align: center; font-size: 30px; margin-bottom: 20px;"> $ 440 </p>
-                <p style="font-size: 12px;"> CONTINUE READING </p>
+                <p style="font-size: 12px;position: relative;left: 10px;"> CONTINUE READING </p>
             </div>
           </div>
           <div class="hotels_snipet">
@@ -620,9 +623,10 @@
                 explicabo perspiciatis asper iores dignissimos.
               </p>
             </div>
+            <img style=" position: relative; left: 30px;"src="assets/button-curve.png">
             <div class="hotel_charge">
                 <p style="text-align: center; font-size: 30px; margin-bottom: 20px;"> $ 440 </p>
-                <p style="font-size: 12px;"> CONTINUE READING </p>
+                <p style="font-size: 12px;position: relative;left: 10px;"> CONTINUE READING </p>
             </div>
           </div>
           
